--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -207,9 +207,9 @@ nav a:hover {
 }
 .product-list {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
   gap: 1rem;
-  align-items: stretch;
+  /* align-items: stretch; */
   width: 100%;
 }
 .product-box {
@@ -265,8 +265,8 @@ nav a:hover {
     display: flex;
   }
   .container {
-    padding: 1rem;
     width: 100%;
+    padding: 0.5rem;
   }
   /* ✅ FIX HERO SLIDER */
   .hero {
