--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -656,6 +656,10 @@ nav a:hover {
     display: block;
   }
 
+  .footer-header{
+    display: none;
+  }
+
   .footer-links,
   .company-address-content {
     max-height: 0;
